--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/x-icon" href="https://openlayers.org/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Map</title>
-    <link rel="stylesheet" href="http://localhost:5500/style">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
   </head>
@@ -19,50 +19,26 @@
           <label class="form__label" for="name">
             Назва<span class="form__required">*</span>
           </label>
-          <input 
-            class="form__input" 
-            id="name" 
-            type="text" 
-            placeholder="Ex.: London" 
-            required
-          >
+          <input class="form__input" id="name" type="text" placeholder="Ex.: London" required>
           <label class="form__label" for="longitude">
             Довгота<span class="form__required">*</span>
           </label>
-          <input 
-            class="form__input" 
-            id="longitude" 
-            type="text"
-            placeholder="Ex.: 30"
-            required
-            >
+          <input class="form__input" id="longitude" type="text" placeholder="Ex.: 30" required>
           <label class="form__label" for="latitude">
             Довжина<span class="form__required">*</span>
           </label>
-          <input 
-            class="form__input"  
-            type="text"
-            id="latitude" 
-            placeholder="Ex.: 40.34" 
-            required
-          >
+          <input class="form__input" type="text" id="latitude" placeholder="Ex.: 40.34" required>
           <label class="form__label" for="description">
             Опис<span class="form__required">*</span>
           </label>
-          <textarea 
-            class="form_description" 
-            id="description" 
-            rows="10" 
-            placeholder="Ex.: London is the capital of Great Britain" 
-            required
-            maxlength="300"
-          ></textarea>
+          <textarea class="form_description" id="description" rows="10"
+            placeholder="Ex.: London is the capital of Great Britain" required maxlength="300"></textarea>
           <button type="submit" class="form__button">Додати</button>
         </form>
         <div class="error"></div>
       </aside>
       <div id="map"></div>
     </main>
-    <script src="http://localhost:5500/script"></script>
+    <script src="main.js"></script>
   </body>
 </html>
